k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: newsblur
  labels:
    app: newsblur
